--- a/src/components/SingleService/SingleService.css
+++ b/src/components/SingleService/SingleService.css
@@ -1,3 +1,31 @@
+.card-bg {
+  background-color: #dad7cd;
+  color: #344e41;
+  border-top-left-radius: 8%;
+  border-top-right-radius: 8%;
+}
+.card-bg:hover {
+  background-color: #344e41;
+  color: #dad7cd;
+  border-top-left-radius: 8%;
+  border-top-right-radius: 8%;
+}
+.card-bg:hover .btn-decoration {
+  color: #344e41;
+  background-color: #b3b3b3;
+  border-radius: 20px;
+  padding: 2% 8%;
+}
+.btn-decoration {
+  background-color: #344e41;
+  color: #dad7cd;
+  border-radius: 20px;
+  padding: 2% 8%;
+}
+
 .text-left {
   text-align: left;
+}
+.fw-bold {
+  font-size: 28px;
 }
