--- a/src/components/SingleService/SingleService.css
+++ b/src/components/SingleService/SingleService.css
@@ -3,18 +3,28 @@
   color: #344e41;
   border-top-left-radius: 8%;
   border-top-right-radius: 8%;
+  border-bottom-left-radius: 8%;
+  border-bottom-right-radius: 8%;
+  margin-top: -120px;
 }
+
 .card-bg:hover {
   background-color: #344e41;
   color: #dad7cd;
   border-top-left-radius: 8%;
   border-top-right-radius: 8%;
+  border-bottom-left-radius: 8%;
+  border-bottom-right-radius: 8%;
 }
 .card-bg:hover .btn-decoration {
   color: #344e41;
   background-color: #b3b3b3;
   border-radius: 20px;
   padding: 2% 8%;
+}
+.card-img {
+  border-top-left-radius: 8%;
+  border-top-right-radius: 8%;
 }
 .btn-decoration {
   background-color: #344e41;
