--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,6 +1,9 @@
-.bg-login {
-  background-color: #dfe6e2;
-  border: 2px solid #344e41;
+.bg-color {
+  background-color: #d4d3cf;
+}
+.btn-color {
+  background-color: #d4d3cf;
+  color: black;
 }
 .text-color {
   color: #344e41;
