--- a/src/components/singleOrder/SingleOrder.css
+++ b/src/components/singleOrder/SingleOrder.css
@@ -1,4 +1,4 @@
-.order-container {
+/* .order-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -7,4 +7,4 @@
   color: #344e41;
   background-color: #d4d3cf;
   padding: 2% 5%;
-}
+} */
